--- a/account.html
+++ b/account.html
@@ -26,9 +26,8 @@
                 <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
-        <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-        <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
-    </div>
+        <a href="cart.html"><img src="images/cart.png" width="30px" height="30px" class="cart"></a>
+        </div>
     </div>
 
 <!---------Account-Page--------->
@@ -108,23 +107,6 @@
     </div>
 </div>
 
-<!---------JS Toggle for Menu --------->
-<script>
-    var MenuItem = document.getElementById("MenuItems");
-    MenuItems.style.maxHeight = "0px";
-    function  menutoggle(){
-        if(MenuItems.style.maxHeight == "0px")
-        {
-            MenuItems.style.maxHeight = "200px";
-        }
-        else{
-            MenuItems.style.maxHeight = "0px";
-        }
-    }
-</script>
-
-
-
 <!------------JS for toggle form----------->
 
 <script>
@@ -148,9 +130,6 @@
     }
 
 </script>
-
-
-
 
 </body>
 </html>
