--- a/products.html
+++ b/products.html
@@ -21,13 +21,12 @@
             <ul id="MenuItem">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="#testimonial">Testimonials</a></li>
+                <li><a href="index.html">Testimonials</a></li>
                 <li><a href="#footer">Contact</a></li>
                 <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
-        <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-        <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+        <a href="cart.html"><img src="images/cart.png" width="30px" height="30px" class="cart"></a>
     </div>
 
     </div>
@@ -239,7 +238,7 @@
 
 <!------- FOOTER SECTION, WITH CONTACT DETAILS, PAYMENT DETAILS AND USEFUL LINKS-------->
 
-<div class="footer">
+<div class="footer" id="footer">
     <div class="container">
         <div class="row">
             <div class="footer-col-1">
@@ -278,20 +277,5 @@
         <p class="copyright">Copyright 2023 - Samson Ayinde</p>
     </div>
 </div>
-
-<!---------JS Toggle for Menu --------->
-<script>
-    var MenuItem = document.getElementById("MenuItems");
-    MenuItems.style.maxHeight = "0px";
-    function  menutoggle(){
-        if(MenuItems.style.maxHeight == "0px")
-        {
-            MenuItems.style.maxHeight = "200px";
-        }
-        else{
-            MenuItems.style.maxHeight = "0px";
-        }
-    }
-</script>
 </body>
 </html>
